# metal-cmake-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  render_types.h
shaders/: test.metal
